--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+app_marque_page:
+    path: /marque_page
+    controller: App\Controller\MarquePageController::index
+
